[metadata]
name = ghcontribs
version = 0.1.0
# version should end in .dev0 if this isn't to be released
short_description = Load and track contributions on GitHub
description = Load and track contributions on GitHub
long_description = file: README.md
long_description_content_type = text/markdown
author = David W.H. Swenson
author_email = dwhs@hyperblazer.net
license = MIT
url = "https://github.com/dwhswenson/ghcontribs"
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    requests
packages = find:

[options.extras_require]
test = 
    pytest
    pytest-cov
web =
    pyyaml

[bdist_wheel]
universal=1
